[package]
name = "amax-eva"
version = "0.1.0"
edition = "2021"
authors = ["Armonia Authors"]
license = "GPL-3.0"
description = "armonia multichain - eva child chain"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "amax-eva"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
clap = { version = "3.1.6", features = ["derive"] }
futures = "0.3"
log = "0.4"
tiny-bip39 = "0.8"
tiny-hderive = "0.3.0"
tokio = { version = "1.17.0", features = ["signal", "rt-multi-thread", "parking_lot"] }

# Parity
jsonrpsee = { version = "0.13.1", features = ["server", "macros"] }
libsecp256k1 = { version = "0.7", features = ["hmac"] }

# Substrate
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22", features = ["wasmtime"] }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22", optional = true }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22", optional = true }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22", features = ["wasmtime"] }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22", features = ["wasmtime"] }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
## Substrate FRAME
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
# These dependencies are used for the node's RPCs
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22", optional = true }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22", optional = true }
# These dependencies are used for try runtime
try-runtime-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22", optional = true }

# Fontier
fc-consensus = { git = "https://github.com/armoniax/frontier", branch = "eva-polkadot-v0.9.22" }
fc-db = { git = "https://github.com/armoniax/frontier", branch = "eva-polkadot-v0.9.22" }
fc-mapping-sync = { git = "https://github.com/armoniax/frontier", branch = "eva-polkadot-v0.9.22" }
fc-rpc = { git = "https://github.com/armoniax/frontier", branch = "eva-polkadot-v0.9.22" }
fc-rpc-core = { git = "https://github.com/armoniax/frontier", branch = "eva-polkadot-v0.9.22" }
fp-rpc = { git = "https://github.com/armoniax/frontier", branch = "eva-polkadot-v0.9.22" }
fp-storage = { git = "https://github.com/armoniax/frontier", branch = "eva-polkadot-v0.9.22" }

# Local
primitives-core = { path = "../primitives/core" }
runtime-common = { path = "../runtime/common" }

eva-runtime = { path = "../runtime/eva", default-features = false, features = ["std"] }
wall-e-runtime = { path = "../runtime/wall-e", default-features = false, features = ["std"] }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }

[features]
default = ["aura"]
aura = [
    "sc-consensus-aura",
    "eva-runtime/aura",
    "wall-e-runtime/aura",
]
manual-seal = [
    "sc-consensus-manual-seal",
    "eva-runtime/manual-seal",
    "wall-e-runtime/manual-seal",
]
rpc_binary_search_estimate = ["fc-rpc/rpc_binary_search_estimate"]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-benchmarking-cli",
    "eva-runtime/runtime-benchmarks",
    "wall-e-runtime/runtime-benchmarks",
]
try-runtime = [
    "try-runtime-cli",
    "eva-runtime/try-runtime",
    "wall-e-runtime/try-runtime",
]
