[package]
name = "amax-eva-client-evm-tracing"
version = "0.1.0"
edition = "2021"
authors = ["Armonia Authors"]
license = "GPL-3.0"
description = "armonia multichain - eva child chain"

[dependencies]
hex = { version = "0.4", features = ["serde"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }

codec = { package = "parity-scale-codec", version = "3.1", default-features = false }
ethereum-types = "0.13.1"

evm-tracing-events = { path = "../../primitives/evm-tracing-events" }
amax-eva-rpc-core-types = { path = "../rpc-core/types" }
