[package]
name = "amax-eva-rpc-core"
version = "0.1.0"
edition = "2021"
authors = ["Armonia Authors"]
license = "GPL-3.0"
description = "armonia multichain - eva child chain"

[dependencies]
futures = "0.3"
jsonrpsee = { version = "0.14.0", features = ["server", "macros"] }
serde = { version = "1.0", features = ["derive"] }

# Parity
codec = { package = "parity-scale-codec", version = "3.1" }
ethereum = { version = "0.12.0", features = ["with-codec", "with-serde"] }
ethereum-types = "0.13.1"

# Frontier
fc-rpc-core = { git = "https://github.com/armoniax/frontier", branch = "eva-polkadot-v0.9.27" }

# Local
amax-eva-client-evm-tracing = { path = "../evm-tracing" }
