[package]
name = "precompile-utils"
authors = [ "PureStake" ]
description = "Utils to write EVM precompiles."
edition = "2021"
version = "0.1.0"

[dependencies]
affix = "0.1.2"
hex = { version = "0.4.3", default-features = false }
impl-trait-for-tuples = "0.2.2"
log = "0.4"
num_enum = { version = "0.5.3", default-features = false }
paste = "1.0.8"
sha3 = { version = "0.9", default-features = false }
similar-asserts = { version = "1.1.0", optional = true }

# Moonbeam
precompile-utils-macro = { path = "macro" }

# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }

# Frontier
evm = { git = "https://github.com/rust-blockchain/evm", rev = "01bcbd2205a212c34451d3b4fabc962793b057d3", default-features = false, features = [ "with-codec" ] }
fp-evm = { git = "https://github.com/armoniax/frontier", branch = "eva-polkadot-v0.9.27", default-features = false }
# TODO we will use the feature `"forbid-evm-reentrancy"` after the frontier upgrade the version after `polkadot-v0.9.29`.
pallet-evm = { git = "https://github.com/armoniax/frontier", branch = "eva-polkadot-v0.9.27", default-features = false }
#pallet-evm = { git = "https://github.com/armoniax/frontier", branch = "eva-polkadot-v0.9.27", default-features = false, features = [ "forbid-evm-reentrancy" ] }

[dev-dependencies]
hex-literal = "0.3.1"

[features]
default = [ "std" ]
std = [
	"codec/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
]
testing = [ "similar-asserts", "std" ]
