[package]
name = "primitives-core"
version = "0.1.0"
edition = "2021"
authors = ["Armonia Authors"]
license = "GPL-3.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Substrate
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25", default-features = false }

# Local
account = { path = "./account", default-features = false }

[features]
default = ["std"]
std = [
    # Substrate
    "sp-core/std",
    "sp-runtime/std",
    # Local
    "account/std",
]
