[package]
name = "primitives-evm-ext"
version = "0.1.0"
edition = "2021"
authors = ["Armonia Authors"]
license = "GPL-3.0"
description = "armonia multichain - eva child chain"

[dependencies]
# Parity
codec = { package = "parity-scale-codec", version = "3.1", default-features = false }
ethereum-types = { version = "0.13.1", default-features = false }

# Substrate
sp-externalities = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22", default-features = false }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22", default-features = false }

# Local
primitives-evm-tracing-events = { path = "../evm-tracing-events", default-features = false }

[features]
default = ["std"]
std = [
    # Parity
    "codec/std",
    "ethereum-types/std",
    # Substrate
    "sp-externalities/std",
    "sp-runtime-interface/std",
    "sp-std/std",
    # Local
    "primitives-evm-tracing-events/std",
]
