[package]
name = "primitives-evm-tracing-events"
version = "0.1.0"
edition = "2021"
authors = ["Armonia Authors"]
license = "GPL-3.0"
description = "armonia multichain - eva child chain"

[dependencies]
# Parity
codec = { package = "parity-scale-codec", version = "3.1", default-features = false }
environmental = { version = "1.1.2", default-features = false }
ethereum = { version = "0.12.0", default-features = false, features = ["with-codec"] }
ethereum-types = { version = "0.13.1", default-features = false }
evm = { git = "https://github.com/rust-blockchain/evm", rev = "01bcbd2205a212c34451d3b4fabc962793b057d3", default-features = false, features = ["with-codec"] }
evm-gasometer = { git = "https://github.com/rust-blockchain/evm", rev = "01bcbd2205a212c34451d3b4fabc962793b057d3", default-features = false }
evm-runtime = { git = "https://github.com/rust-blockchain/evm", rev = "01bcbd2205a212c34451d3b4fabc962793b057d3", default-features = false }

# Substrate
sp-runtime-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "environmental/std",
    "ethereum/std",
    "ethereum-types/std",
    "evm/std",
    "evm-gasometer/std",
    "evm-runtime/std",

    "sp-runtime-interface/std",
]
evm-tracing = ["evm/tracing", "evm-gasometer/tracing", "evm-runtime/tracing"]
