[package]
name = "primitives-rpc"
version = "0.1.0"
edition = "2021"
authors = ["Armonia Authors"]
license = "GPL-3.0"
description = "armonia multichain - eva child chain"

[dependencies]
# Parity
codec = { package = "parity-scale-codec", version = "3.1", default-features = false }
ethereum = { version = "0.12.0", default-features = false, features = ["with-codec"] }
ethereum-types = { version = "0.13.1", default-features = false }

# Substrate
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22", default-features = false }

[features]
default = ["std"]
std = [
    # Parity
    "codec/std",
    "ethereum/std",
    "ethereum-types/std",
    # Substrate
    "sp-api/std",
    "sp-runtime/std",
    "sp-std/std",
]
